remove unused vars,\nchange @Get routes for maps getEta and users getUser
