# public/swagger.json
@@ -170,43 +170,6 @@
 				]
 			}
 		},
-		"/maps/eta/api/{currentLocation;:destination}": {
-			"get": {
-				"operationId": "GetEtaApi",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "number",
-									"format": "double"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "currentLocation",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "path",
-						"name": "destination",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
 		"/users/user{userId}": {
 			"get": {
 				"operationId": "GetUser",
